--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pwasampleapp",
+  "name": "withoutpwasampleapp",
   "version": "0.0.0",
   "private": true,
   "description": "Small description for pwasampleapp goes here",
